js/js.translator/testData/incremental/invalidation/typeScriptExportsPerModule/lib2/l2.3.kt
@JsExport
class MyClass(val stepId: Int) {
    fun qux() = foo() + stepId
}

